tests/lean/antiquotRecovery.lean.expected.out
antiquotRecovery.lean:5:18: error: expected ')'
